# GKD-Software-2025-Test

./: CMakeLists.txt  code.cpp  part1.cpp
